--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,14 @@ body {
   background-color: var(--second-color) !important;
 }
 
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23d90062'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23d90062'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
 .dropdown-item {
   color: var(--first-alpha-color);
   font-weight: bold;
@@ -80,6 +88,14 @@ body {
 
 /* MY STYLES */
 
+.bg-color {
+  background-color: var(--bg-color);
+}
+
+.bg-alpha-color{
+  background-color: var(--bg-alpha-color);
+}
+
 .bg-gradient-blue-green {
   background-color: rgba(83, 184, 152, 1);
   background-image: linear-gradient(
@@ -92,6 +108,21 @@ body {
     rgba(28, 118, 173, 0.92),
     rgba(83, 184, 152, 1)
   );
+}
+
+.bg-hero-image {
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-third-color {
+  background-color: var(--third-color);
+}
+
+.text-third {
+  color: var(--third-color);
 }
 
 /* QUERIES */
