--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,12 @@ body {
   background-color: var(--bg-alpha-color);
 }
 
+
+
+.bg-second-alpha-color{
+  background-color: var(--second-alpha-color);
+}
+
 .bg-gradient-blue-green {
   background-color: rgba(83, 184, 152, 1);
   background-image: linear-gradient(
@@ -123,6 +129,10 @@ body {
 
 .text-third {
   color: var(--third-color);
+}
+
+.text-first-color{
+  color: var(--first-color);
 }
 
 /* QUERIES */
